@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <module type="WEB_MODULE" version="4">
   <component name="NewModuleRootManager">
-    <content url="file://$MODULE_DIR$/../../../wp-admin" />
-    <content url="file://$MODULE_DIR$" />
-    <content url="file://$MODULE_DIR$/../../../wp-includes" />
+    <content url="file://$MODULE_DIR$/../../.." />
     <orderEntry type="inheritedJdk" />
     <orderEntry type="sourceFolder" forTests="false" />
   </component>
 </module>
-
