@@ -1,22 +1,2 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project version="4">
-  <component name="WebResourcesPaths">
-    <contentEntries>
-      <entry url="file://$PROJECT_DIR$/../../../wp-admin">
-        <entryData>
-          <resourceRoots>
-            <path value="file://$PROJECT_DIR$/../../../wp-admin" />
-          </resourceRoots>
-        </entryData>
-      </entry>
-      <entry url="file://$PROJECT_DIR$/../../../wp-includes">
-        <entryData>
-          <resourceRoots>
-            <path value="file://$PROJECT_DIR$/../../../wp-includes" />
-          </resourceRoots>
-        </entryData>
-      </entry>
-    </contentEntries>
-  </component>
-</project>
-
+<project version="4" />
