@@ -2,11 +2,11 @@
 Theme Name: NoNa
 Theme URI: http://buynowshop.com/themes/nona/
 Description: Missing the pretty pin-up girl posing in the header, this grunge based theme originally known as <a href="http://buynowshop.com/themes/pinup-meets-grunge/">Pinup Meets Grunge</a> beautifully blends custom background colors. This built-in options give you the creative opportunity to truly make this theme your own. Do not be scared off by the dark look, try installing your own copy and playing with the custom background color option yourself. Remember, if you are not a fan of "blank" headers feel free to drop us a note and we can discuss additional options. <strong>NB: This Theme should be used with WordPress 3.0 or higher; earlier versions of WordPress may not support all of the features and functions used by this Theme.</strong>
-Version: 1.9.2-alpha
+Version: 1.9.2
 Author: Edward Caissie
 Author URI: http://edwardcaissie.com/
 WordPress Required Version: 3.4
-WordPress Tested Version: 4.0
+WordPress Tested Version: 4.1
 Tags: brown, orange, silver, tan, light, two-columns, right-sidebar, fixed-layout, threaded-comments, sticky-post, custom-menu, custom-background
 License: GNU General Public License v2
 License URI: http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
